--- a/code/ENVS-193DS_spring-2025_final.qmd
+++ b/code/ENVS-193DS_spring-2025_final.qmd
@@ -170,11 +170,47 @@ Write 3-5 sentences summarizing what you found, making references to the figure 
 Compare and contrast your affective visualization from Homework 3 and the exploratory visualizations you made for Homework 2. In 1-3 sentences each, explain:  
 
 - How are the visualizations different from each other in the way you have represented your data?
+
+The visualizations had different shapes. In Homework 2, I did a boxplot, and in Homework 3, I did a histogram. 
+
 - What similarities do you see between all your visualizations?
+
+All of my visualizations for my personal data are plotting shower length (min), because my behavior with showering was the main focus of my project. 
+
 - What patterns (e.g. differences in means/counts/proportions/medians, trends through time, relationships between variables) do you see in each visualization? Are these different between visualizations? If so, why? If not, why not?
+
+In Homework 2, I had barely any data points, so my mean shower length for work days and non work days were clearly different. However, for homework 3, they appeared similar. So, I just decided to do a histogram for my visualization as it would be easier to incorporate into an art piece. 
+
 - What kinds of feedback did you get during week 9 in workshop or from the instructors? How did you implement or try those suggestions? If you tried and kept those suggestions, explain how and why; if not, explain why not.
 
+I was told to make the graph larger and more of a central focus, as the eye was drawn to my artwork rather than the actual data. I am definitely going to incorporate this into my final visualization. Also personally, I want to represent both the means with work days vs non work days (because this was my initial central question), as well as a histogram of all of my showers. 
+
 #### b. Sharing your affective visualization (25 points)
+```{r}
+ggplot(my_data, aes(x= `Work Day`,
+y= `shower length (min)`,
+color = `Work Day`)) + # outlining my plot, data, and variables
+geom_jitter(position = position_jitter(width = 0.2, height = 0), # jittering poitns 
+show.legend = FALSE) +
+  stat_summary(
+fun = mean, # show mean
+geom = "point", # add point
+size = 2,# change size of point
+color = "darkblue" # make the color black
+) +
+labs(x = "Work Day (yes or no)", # labels
+y = "shower length (min)",
+title = "Shower Length by Work Day/Non Work Day") +
+theme_minimal() + # minimizing theme
+  # making points look like water droplets 
+  scale_color_manual(values = c("N" = "turquoise", "Y" = "turquoise")) + 
+  theme(panel.grid = element_blank()) #  removing panel grids
+```
+
+```{r}
+var.test()
+```
+
 
 This is a component you will complete in workshop during week 10. **We will be taking attendance that day. If you attend class and complete the activity, you will receive full credit for this section.** 
 
