--- a/code/ENVS-193DS_spring-2025_final.qmd
+++ b/code/ENVS-193DS_spring-2025_final.qmd
@@ -16,6 +16,7 @@ library(here)
 library(flextable)
 library(janitor)
 library(dplyr)
+library(MuMIn)
 my_data <- read_csv(here("data", "my_data.csv"))
 ```
 
@@ -25,7 +26,7 @@ my_data <- read_csv(here("data", "my_data.csv"))
 
 What statistical tests did your co-worker use? Clearly connect the test to the part that you are addressing (e.g. "In part 1, they used _______. In part 2, they used _______.").
 
-In part 1, they used simple linear regression to determine if there was a correlation between distance from headwater (km) and annual total nitrogen load (kg/year). 
+In part 1, they used Pearson's r to determine if there was a correlation between distance from headwater (km) and annual total nitrogen load (kg/year). 
 
 In part 2, the authors used analysis of variance (ANOVA) to compare the average nitrogen load (kg/year) in different sources such as urban land, atmospheric deposition, fertilizer, wastewater treatment, and grasslands. 
 
@@ -37,7 +38,6 @@ They should have included the F-statistic, which would tell us if the variance a
 
 They also should have run a Tukey HSD test, which would provide more information on which of the sources have different mean nitrogen load (kg/year) when compared. 
 
-Be specific and use variables and/or statistics from the example.
 
 #### c. Suggestions for rewriting (20 points)
 
@@ -46,6 +46,10 @@ In 1-3 sentences, _write new research statements_ to include relevant components
 Be sure that your rewritten statements clearly delineate the _biological narrative_ from the _statistical summary_. See lecture and workshop for examples of writing.  
 
 Note that your co-worker didn't include any information about the test statistic, distribution, etc., and that you only know the p-value. For any part that you do not know, list that part with text. For example, you could write something like: "... **r = correlation coefficient**, p = 0.03, **$\alpha$ = significance level** ..."
+
+There is a (strong/weak positive/negative) relationship between the distance from the headwater (km) and annual nitrogen load (kg/year) (Pearson's r = correlation coefficient, p=0.03, $\alpha$ = significance level)
+
+We found a (small, medium, or large) difference ($\eta$^2^ = cohen's d effect size) between sources of nitrogen in mean annual nitrogen load (kg/year) (One-way ANOVA, F(6, degrees of freedom of observations) = F statistic, p=0.02, $\alpha$ = significance level) On average, (source) tended to have the highest average annual nitrogen load (kg/year). 
 
 ## Problem 2. Data visualization (36 points)
 
