--- a/code/ENVS-193DS_spring-2025_final.qmd
+++ b/code/ENVS-193DS_spring-2025_final.qmd
@@ -18,8 +18,10 @@ library(janitor)
 library(dplyr)
 library(MuMIn)
 library(lubridate)
+library(DHARMa)
 my_data <- read_csv(here("data", "my_data.csv"))
 sst <- read_csv(here("data", "SST_update2023.csv"))
+nest_boxes <- read_csv(here("data","occdist.csv"))
 ```
 
 ## Problem 1. Research writing (36 points)
@@ -28,17 +30,17 @@ sst <- read_csv(here("data", "SST_update2023.csv"))
 
 What statistical tests did your co-worker use? Clearly connect the test to the part that you are addressing (e.g. "In part 1, they used _______. In part 2, they used _______.").
 
-In part 1, they used Pearson's r to determine if there was a correlation between distance from headwater (km) and annual total nitrogen load (kg/year). 
+**In part 1, they used Pearson's r to determine if there was a correlation between distance from headwater (km) and annual total nitrogen load (kg/year).**
 
-In part 2, the authors used analysis of variance (ANOVA) to compare the average nitrogen load (kg/year) in different sources such as urban land, atmospheric deposition, fertilizer, wastewater treatment, and grasslands. 
+**In part 2, the authors used analysis of variance (ANOVA) to compare the average nitrogen load (kg/year) in different sources such as urban land, atmospheric deposition, fertilizer, wastewater treatment, and grasslands.** 
 
 #### b. More information needed (8 points)
 
 The test in part 2 seems familiar to you, but you think there's more that your co-worker needs to do to provide more context for the results. List 2 additional tests and/or pieces of information that should be included, and explain why those tests and/or pieces of information would add useful additional context.  
 
-They should have included the F-statistic, which would tell us if the variance among groups is large compared to the variance within groups. The higher the F-statistic is, the more likely that the actual mean nitrogen load (kg/year) between sources is different. 
+**They should have included the F-statistic, which would tell us if the variance among groups is large compared to the variance within groups. The higher the F-statistic is, the more likely that the actual mean nitrogen load (kg/year) between sources is different.** 
 
-They also should have run a Tukey HSD test, which would provide more information on which of the sources have different mean nitrogen load (kg/year) when compared. 
+**They also should have run a Tukey HSD test, which would provide more information on which of the sources have different mean nitrogen load (kg/year) when compared.** 
 
 
 #### c. Suggestions for rewriting (20 points)
@@ -47,11 +49,11 @@ In 1-3 sentences, _write new research statements_ to include relevant components
 
 Be sure that your rewritten statements clearly delineate the _biological narrative_ from the _statistical summary_. See lecture and workshop for examples of writing.  
 
-Note that your co-worker didn't include any information about the test statistic, distribution, etc., and that you only know the p-value. For any part that you do not know, list that part with text. For example, you could write something like: "... **r = correlation coefficient**, p = 0.03, **$\alpha$ = significance level** ..."
+Note that your co-worker didn't include any information about the test statistic, distribution, etc., and that you only know the p-value. For any part that you do not know, list that part with text. For example, you could write something like: "... *r = correlation coefficient*, p = 0.03, *$\alpha$ = significance level* ..."
 
-There is a (strong/weak positive/negative) relationship between the distance from the headwater (km) and annual nitrogen load (kg/year) (Pearson's r = correlation coefficient, p=0.03, $\alpha$ = significance level)
+**There is a (strong/weak positive/negative) relationship between the distance from the headwater (km) and annual nitrogen load (kg/year) (Pearson's r = correlation coefficient, p=0.03, $\alpha$ = significance level)**
 
-We found a (small, medium, or large) difference ($\eta$^2^ = cohen's d effect size) between sources of nitrogen in mean annual nitrogen load (kg/year) (One-way ANOVA, F(6, degrees of freedom of observations) = F statistic, p=0.02, $\alpha$ = significance level) On average, (source) tended to have the highest average annual nitrogen load (kg/year). 
+**We found a (small, medium, or large) difference ($\eta$^2^ = cohen's d effect size) between sources of nitrogen in mean annual nitrogen load (kg/year) (One-way ANOVA, F(6, degrees of freedom of observations) = F statistic, p=0.02, $\alpha$ = significance level) On average, (source) tended to have the highest average annual nitrogen load (kg/year).** 
 
 ## Problem 2. Data visualization (36 points)
 
@@ -118,6 +120,8 @@ ggplot(subset(sst_clean, year %in% c("2018", "2019", "2020", "2021", "2022", "20
 #### a. Response variable (2 points)  
 
 In 1-2 sentences, explain what the 1s and 0s mean in this data set biologically.
+
+**The 1s and 0s represent the different species of birds that could occupy the nest box (ex. a swift parrot gets a 1 in "sp" and 0's in "cs", "e", and "tm), and a 1 in the "e" column represents an unoccupied nest box (cs = common starling, and tm = tree martin.) **
 
 #### b. Purpose of study (2 points)
 
