--- a/code/ENVS-193DS_spring-2025_final.qmd
+++ b/code/ENVS-193DS_spring-2025_final.qmd
@@ -147,7 +147,7 @@ Your table should have 4 columns: (1) model number, (2) season, (3) distance to 
 |:------------:|:---:|:-------------:|:-------------:|
 | 0            |     |                 |null model (no predictors)        | 
 | 1            |  X  |       X         | saturated model (all predictors) |
-| 2            |  X  |                 | year predicts Swift Parrot nest box occupancy|
+| 2            |  X  |                 | season predicts Swift Parrot nest box occupancy|
 | 3            |     |       X         |distance to forest edge predicts swift parrot nest box occupancy|
 
 #### e. Run the models (8 points)
@@ -173,10 +173,10 @@ model0 <- glm(sp ~ 1, # formula null model
 model1 <- glm(sp ~ edge_distance + season, # formula saturated model
              data = nest_boxes_clean,  # data frame 
               family = "binomial") #binomial distribution 
-model2 <- glm(sp ~ edge_distance, # formula edge distance as predictor
+model2 <- glm(sp ~ season, # formula season as predictor
              data = nest_boxes_clean,  # data frame 
             family = "binomial") #binomial distribution 
-model3 <- glm(sp ~ season, # fromula season as predictor 
+model3 <- glm(sp ~ edge_distance, # formula for edge distance as predictor 
              data = nest_boxes_clean, # data frame 
               family = "binomial") #binomial distribution 
 ```
@@ -188,7 +188,10 @@ Check your diagnostics for all models using simulated residuals from the `DHARMa
 
 Display the diagnostic plots for each model.
 ```{r}
-
+plot(simulateResiduals(model0)) # residuals look ok for null model
+plot(simulateResiduals(model1)) # residuals look ok for saturated model 
+plot(simulateResiduals(model2)) # residuals look ok for season
+plot(simulateResiduals(model3)) # residuals look ok for edge distance 
 ```
 
 #### g. Select the best model (6 points) 
