--- a/code/ENVS-193DS_spring-2025_final.qmd
+++ b/code/ENVS-193DS_spring-2025_final.qmd
@@ -19,6 +19,7 @@ library(dplyr)
 library(MuMIn)
 library(lubridate)
 library(DHARMa)
+library(ggeffects)
 my_data <- read_csv(here("data", "my_data.csv"))
 sst <- read_csv(here("data", "SST_update2023.csv"))
 nest_boxes <- read_csv(here("data","occdist.csv"))
@@ -155,12 +156,7 @@ Your table should have 4 columns: (1) model number, (2) season, (3) distance to 
 ```{r}
 #| include: FALSE
 nest_boxes_clean <- nest_boxes |> 
-  clean_names() |> 
-  mutate(box_occupant = "swift_parrot", 
-         edge_distance = as_factor(edge_distance), 
-         season = as_factor(season)) |> 
-  select(box_occupant, edge_distance, season, sp)
-str(nest_boxes_clean)
+  clean_names()
 ```
 
 
@@ -177,7 +173,7 @@ model2 <- glm(sp ~ season, # formula season as predictor
              data = nest_boxes_clean,  # data frame 
             family = "binomial") #binomial distribution 
 model3 <- glm(sp ~ edge_distance, # formula for edge distance as predictor 
-             data = nest_boxes_clean, # data frame 
+              data = nest_boxes_clean, # data frame 
               family = "binomial") #binomial distribution 
 ```
 
@@ -197,10 +193,19 @@ plot(simulateResiduals(model3)) # residuals look ok for edge distance
 #### g. Select the best model (6 points) 
 
 Using Akaike's Information Criterion (AIC) from the `MuMIn` package, choose the best model.  
-
+```{r}
+AICc(model1,
+     model2,
+     model3,
+     model0) |> 
+  # arranging output in descending order of AIC
+  arrange(AICc)
+```
 In text, write what the best model was (i.e. "The best model as determined by Akaike's Information Criterion (AIC)...").  
 
-**Use the predictors and the response variable to describe the model**, not the model number that you assigned.
+**The best model that predicts swift parrot nest box occupancy as determined by Akaike's Information Criterion (AIC) includes season. **
+
+Use the predictors and the response variable to describe the model, not the model number that you assigned.
 
 #### h. Visualize the model predictions (24 points)
 
@@ -213,6 +218,33 @@ For full credit:
 - make sure the x- and y-axis labels are written in full
 - take out the gridlines
 - use colors that are different from the default
+```{r}
+mod_pred <- ggpredict(model1, # model object 
+                      terms = c("edge_distance", "season")) # predictors 
+ggplot() + 
+  geom_point(data = nest_boxes_clean, 
+             aes(x = edge_distance, 
+                 y = sp), 
+             size = 3, # point size 
+             alpha = 0.4, # point transparency 
+             color = "darkgreen") + 
+  geom_ribbon(data = mod_pred, # model predictions on the plot 
+               aes(x = x, 
+                  y = predicted, 
+                  ymin = conf.low, 
+                  ymax = conf.high, 
+                  fill = group, 
+                  alpha = 0.4)) + 
+  geom_line(data = mod_pred, 
+            inherit.aes = FALSE,
+            aes(x = x, 
+                  y = predicted, 
+                color = group, 
+                linewidth = 1.2)) + 
+  # y axis formatting 
+  scale_y_continuous(limits = c(0,1), 
+                     breaks = c(0,1))
+```
 
 #### i. Write a caption for your figure. (7 points)
 
