--- a/code/ENVS-193DS_spring-2025_final.qmd
+++ b/code/ENVS-193DS_spring-2025_final.qmd
@@ -203,7 +203,7 @@ AICc(model1,
 ```
 In text, write what the best model was (i.e. "The best model as determined by Akaike's Information Criterion (AIC)...").  
 
-**The best model that predicts swift parrot nest box occupancy as determined by Akaike's Information Criterion (AIC) includes both season and distance from forest edge. **
+**The best model that predicts swift parrot nest box occupancy as determined by Akaike's Information Criterion (AIC) includes both season and distance from forest edge. (include stats)**
 
 Use the predictors and the response variable to describe the model, not the model number that you assigned.
 
@@ -254,13 +254,15 @@ labs(x = "Edge Distance",
 scale_fill_manual(values = c("2016" = "pink", "2019" = "lightblue")) + 
   theme(panel.grid = element_blank(), 
         panel.background = element_blank(), 
-        panel.border = element_rect(color = "black", fill = NA))
+        panel.border = element_rect(color = "black", fill = NA),
+        legend.position = "inside",
+        legend.position.inside = c(0.8,0.8))
 ```
 
 #### i. Write a caption for your figure. (7 points)
 
 Include a figure number, title, description of the figure, and data citation.
-
+**Fig 2. **
 #### j. Calculate model predictions (4 points)
 
 Calculate the predicted probabilities of Swift Parrot nest box occupancy with 95% at 0 m from forest edge and 900 m from forest edge for each level in `season`.  
